added bannar section

--- a/index.html
+++ b/index.html
@@ -26,13 +26,79 @@
 
 <body class="font-family">
 
+  <!-- nav Releted desine -->
+
+  <div class="navbar bg-[#EDC;]">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <label tabindex="0" class="btn btn-ghost lg:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 
+           24 24" stroke="currentColor"><path stroke-linecap="round" stroke- 
+            linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+        </label>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow
+         bg-blue-300 rounded-box w-26">
+         <li><a>MEN</a></li>
+         <li><a>WOMEN</a></li>
+         <li><a>KIDS</a></li>
+         <li><a>COLLECTION</a></li>
+         <li><a>TRENDS</a></li>
+        </ul>
+      </div>
+      <a class="btn btn-ghost normal-case text-xl">FIFASH</a>
+    </div>
+    <div class="navbar-center hidden lg:flex">
+      <ul class="menu menu-horizontal px-1">
+        <li><a>MEN</a></li>
+        <li><a>WOMEN</a></li>
+        <li><a>KIDS</a></li>
+        <li><a>COLLECTION</a></li>
+        <li><a>TRENDS</a></li>
+      </ul>
+    </div>
+    <div class="navbar-end">
+      <img class="pr-5" src="./img/Cart.svg" alt="">
+      <button class="btn btn-outline ">LOGIN</button>
+    </div>
+  </div>
+
+  <!-- bannar section -->
+
+  <section class="lg:max-w-[1512px] lg:h-[440px] bg-[#EEDDCC]">
+
+    <div class="lg:flex justify-center items-center pt-10 lg:space-x-20">
+        <div class="space-y-5">
+            <h1 class="mx-auto lg:w-[432px] font-extrabold text-6xl">Find The Best <br>
+               Fashion Style <br> 
+               For You </h1>
+               <p class="">
+                Amet minim mollit non deserunt ullamco <br>
+                 est sit aliqua dolor do amet sint. Velit 
+                officia <br>
+                 consequat duis enim velit mollit.
+              </p>
+
+              <h1 class="lg:w-[190px] h-[50px] bg-black text-center text-white pt-3
+              rounded-md  shadow-md">
+                SHOP NOW
+              </h1>
+      
+        </div>
+        <div>
+          <img class="lg:w-[351px] " src="./img/Rectangle 6.png" alt="">
+        </div>
+
+
+    </div>
+     
+  </section>
 
 
 
 
 
 
-  
+
   
 </body>
 </html>
