added card section

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </style>
 </head>
 
-<body class="font-family">
+<body class="container mx-auto font-family">
 
   <!-- nav Releted desine -->
 
-  <div class="navbar bg-[#EDC;]">
+  <div class="  navbar  bg-[#EDC;]">
     <div class="navbar-start">
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -64,7 +64,7 @@
 
   <!-- bannar section -->
 
-  <section class="lg:max-w-[1512px] lg:h-[440px] bg-[#EEDDCC]">
+  <section class="container mx-auto bg-[#EEDDCC]">
 
     <div class="lg:flex justify-center items-center pt-10 lg:space-x-20">
         <div class="space-y-5">
@@ -72,25 +72,64 @@
                Fashion Style <br> 
                For You </h1>
                <p class="">
-                Amet minim mollit non deserunt ullamco <br>
+                "Amet minim mollit non deserunt ullamco <br>
                  est sit aliqua dolor do amet sint. Velit 
                 officia <br>
-                 consequat duis enim velit mollit.
+                 consequat duis enim velit mollit".
               </p>
 
               <h1 class="lg:w-[190px] h-[50px] bg-black text-center text-white pt-3
               rounded-md  shadow-md">
                 SHOP NOW
               </h1>
-      
         </div>
         <div>
           <img class="lg:w-[351px] " src="./img/Rectangle 6.png" alt="">
         </div>
-
-
     </div>
-     
+  </section>
+
+  <!-- card section -->
+
+  <section class="my-10">
+      <div class="text-center">
+        <h1 class="font-extrabold text-4xl text-black">New Collection</h1>
+        <h2>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</h2>
+      </div>
+
+      <!-- card -->
+      <div class="lg:grid grid-cols-3 justify-center">
+        <!-- 1card -->
+          <div class="relative my-10">
+            <img class="lg:w-[300px] lg:h-[350px] mx-6
+             " src="./img/Rectangle 14.png" alt="">
+            <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
+            rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
+            SWEATER
+            </h1>
+          </div>
+        <!-- 1card -->
+          <div class="relative my-10">
+            <img class="lg:w-[300px] lg:h-[350px] mx-6"
+             src="./img/Rectangle 16.png" alt="">
+            <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
+            rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
+            SWEATER
+            </h1>
+          </div>
+        <!-- 1card -->
+          <div class="relative my-10">
+            <img class="lg:w-[300px] lg:h-[350px] mx-6" 
+            src="./img/Rectangle 18.png" alt="">
+            <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
+            rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
+            SWEATER
+            </h1>
+          </div>
+
+
+      </div>
+
   </section>
 
 
