added fashion section

--- a/index.html
+++ b/index.html
@@ -126,10 +126,61 @@
             SWEATER
             </h1>
           </div>
-
-
       </div>
+  </section>
 
+  <!-- best fashion -->
+
+  <section class=" my-20">
+        <div class="lg:flex justify-center lg:space-x-16 relative">
+
+          <div class="space-y-10">
+            <h1 class="font-extrabold text-6xl">
+              Best Fashion <br> Since 2014
+            </h1>
+            <p class=" lg:w-[519px]">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet 
+               sint. Velit officia consequat duis enim velit mollit. Exercitation 
+                veniam consequat sunt nostrud amet.duis enim velit mollit. 
+                 Exercitation veniam consequat sunt nostrud amet.duis enim velit 
+                  mollit. Exercitation veniam consequat sunt nostrud amet.duis enim 
+                   velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+
+            <div class="lg:w-[675px] lg:h-[122px] bg-[#D2B79E] absolute bottom-10
+             shadow-2xl rounded-lg   ">
+
+             <div class="flex justify-around pt-5">
+              <div>
+                <div class="">
+                   <h1 class="font-extrabold text-2xl lg:text-5xl"> 2014</h1>
+                   <p>Fifash Founded</p>
+                </div>
+           </div>
+
+           <div>
+                <div class=" ">
+                   <h1 class="font-extrabold text-2xl lg:text-5xl"> 8900+</h1>
+                   <p>Product Sold</p>
+                </div>
+           </div>
+
+           <div>
+                <div class="">
+                   <h1 class="font-extrabold text-2xl lg:text-5xl">  3100+</h1>
+                   <p>Best Reviews</p>
+                </div>
+           </div>
+             </div>
+                 
+            </div>
+
+         </div>
+             <div>
+                <img class="w-[532px]" src="./img/Rectangle 88.png" alt="">
+             </div>
+            
+        </div>
   </section>
 
 
