--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <!-- Font Awasome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+<!-- css link -->
+<link rel="stylesheet" href="style.css">
+
 <style>
   .font-family{
     font-family: 'Frank Ruhl Libre', serif;
@@ -101,7 +104,7 @@
       <div class="lg:grid grid-cols-3 justify-center">
         <!-- 1card -->
           <div class="relative my-10">
-            <img class="lg:w-[300px] lg:h-[350px] mx-6
+            <img class="lg:w-[300px] lg:h-[350px] mx-4
              " src="./img/Rectangle 14.png" alt="">
             <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
             rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
@@ -110,7 +113,7 @@
           </div>
         <!-- 1card -->
           <div class="relative my-10">
-            <img class="lg:w-[300px] lg:h-[350px] mx-6"
+            <img class="lg:w-[300px] lg:h-[350px] mx-4"
              src="./img/Rectangle 16.png" alt="">
             <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
             rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
@@ -119,7 +122,7 @@
           </div>
         <!-- 1card -->
           <div class="relative my-10">
-            <img class="lg:w-[300px] lg:h-[350px] mx-6" 
+            <img class="lg:w-[300px] lg:h-[350px] mx-4" 
             src="./img/Rectangle 18.png" alt="">
             <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
             rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
@@ -182,6 +185,69 @@
             
         </div>
   </section>
+
+  <!-- carosol -->
+
+   <section class="lg:w-[1512px] lg:h-[630px] bg-[#2C1915]">
+         <div class="lg:flex justify-center items-center">
+               <div class="card-containar space-y-4 lg:space-y-8 pt-10 ">
+                  <h1 class="text-white font-bold text-6xl">
+                     Best Seller <br> Product
+                  </h1>
+                  <p class=" lg:w-[519px] text-white">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet 
+                     sint. Velit officia consequat duis enim velit mollit. Exercitation 
+                      veniam consequat sunt nostrud amet.duis enim velit mollit. 
+                       Exercitation veniam consequat sunt nostrud amet.duis enim velit 
+                        mollit. Exercitation veniam consequat sunt nostrud amet.duis enim 
+                         velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </p>
+
+                    
+              <h1 class="lg:w-[190px] lg:h-[50px] bg-gray-400 font-extrabold
+               text-center text-black lg:pt-3
+              rounded-md  shadow-md">
+               LOGIN
+              </h1>
+
+               </div>
+
+                <div>
+
+                  <div class="lg:flex  space-x-5 pt-10 lg:pt-28 mx-auto">
+                       <div  class="text-white">
+                        <img class="ml-10 mb-5" src="./img/Rectangle 32.png" alt="">
+                        <div class="ml-10 my-4">
+                          <span class="fa fa-star checked"></span>
+                         <span class="fa fa-star checked"></span>
+                         <span class="fa fa-star checked"></span>
+                         <span class="fa fa-star"></span>
+                         <span class="fa fa-star"></span>
+                         <h1 class="font-extrabold text-2xl">Pastel Langue Sleeve</h1>
+                         <h2 class="font-extrabold text-xl ">$180</h2>
+                           </div> 
+                       </div>
+
+                       <div class="text-white">
+                        <img class="ml-5" src="./img/Rectangle 34.png" alt="">
+                         <div class="ml-10 my-4">
+                        <span class="fa fa-star checked"></span>
+                       <span class="fa fa-star checked"></span>
+                       <span class="fa fa-star checked"></span>
+                       <span class="fa fa-star"></span>
+                       <span class="fa fa-star"></span>
+                       <h1 class="font-extrabold text-2xl">Pastel Langue Sleeve</h1>
+                       <h2 class="font-extrabold text-xl ">$180</h2>
+                         </div> 
+                       </div>
+
+                  </div>
+
+                </div>
+
+
+         </div>
+   </section>
 
 
 
