--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
   <section class="container mx-auto bg-[#EEDDCC]">
 
-    <div class="lg:flex justify-center items-center pt-10 lg:space-x-20">
-        <div class="space-y-5">
+    <div class="lg:flex justify-center items-center lg:pt-10 lg:space-x-20">
+        <div class="space-y-5 p-5">
             <h1 class="mx-auto lg:w-[432px] font-extrabold text-6xl">Find The Best <br>
                Fashion Style <br> 
                For You </h1>
@@ -104,7 +104,7 @@
       <div class="lg:grid grid-cols-3 justify-center">
         <!-- 1card -->
           <div class="relative my-10">
-            <img class="lg:w-[300px] lg:h-[350px] mx-4
+            <img class="lg:w-[300px] lg:h-[350px] mx-2
              " src="./img/Rectangle 14.png" alt="">
             <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
             rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
@@ -113,7 +113,7 @@
           </div>
         <!-- 1card -->
           <div class="relative my-10">
-            <img class="lg:w-[300px] lg:h-[350px] mx-4"
+            <img class="lg:w-[300px] lg:h-[350px] mx-2"
              src="./img/Rectangle 16.png" alt="">
             <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
             rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
@@ -122,7 +122,7 @@
           </div>
         <!-- 1card -->
           <div class="relative my-10">
-            <img class="lg:w-[300px] lg:h-[350px] mx-4" 
+            <img class="lg:w-[300px] lg:h-[350px] mx-2" 
             src="./img/Rectangle 18.png" alt="">
             <h1 class="w-[190px] h-[40px] bg-black text-center text-white pt-1
             rounded-md  shadow-md text-3xl absolute bottom-5 left-20">
@@ -137,7 +137,7 @@
   <section class=" my-20">
         <div class="lg:flex justify-center lg:space-x-16 relative">
 
-          <div class="space-y-10">
+          <div class="space-y-10 p-6">
             <h1 class="font-extrabold text-6xl">
               Best Fashion <br> Since 2014
             </h1>
@@ -153,7 +153,7 @@
             <div class="lg:w-[675px] lg:h-[122px] bg-[#D2B79E] absolute bottom-10
              shadow-2xl rounded-lg   ">
 
-             <div class="flex justify-around pt-5">
+             <div class="flex justify-around pt-5 p-">
               <div>
                 <div class="">
                    <h1 class="font-extrabold text-2xl lg:text-5xl"> 2014</h1>
@@ -190,7 +190,7 @@
 
    <section class="lg:w-[1512px] lg:h-[630px] bg-[#2C1915]">
          <div class="lg:flex justify-center items-center">
-               <div class="card-containar space-y-4 lg:space-y-8 pt-10 ">
+               <div class="card-containar space-y-4 lg:space-y-8 pt-10 p-6 ">
                   <h1 class="text-white font-bold text-6xl">
                      Best Seller <br> Product
                   </h1>
@@ -204,8 +204,8 @@
                   </p>
 
                     
-              <h1 class="lg:w-[190px] lg:h-[50px] bg-gray-400 font-extrabold
-               text-center text-black lg:pt-3
+              <h1 class="w-[190px] h-[50px] bg-gray-400 font-extrabold
+               text-center text-black pt-3
               rounded-md  shadow-md">
                LOGIN
               </h1>
@@ -216,7 +216,8 @@
 
                   <div class="lg:flex  space-x-5 pt-10 lg:pt-28 mx-auto">
                        <div  class="text-white">
-                        <img class="ml-10 mb-5" src="./img/Rectangle 32.png" alt="">
+                        <img class="ml-10 mb-5 w-[225px]"
+                         src="./img/Rectangle 32.png" alt="">
                         <div class="ml-10 my-4">
                           <span class="fa fa-star checked"></span>
                          <span class="fa fa-star checked"></span>
@@ -228,8 +229,8 @@
                            </div> 
                        </div>
 
-                       <div class="text-white">
-                        <img class="ml-5" src="./img/Rectangle 34.png" alt="">
+                       <div class="text-white pr-20">
+                        <img class="ml-5 w-[225px]" src="./img/Rectangle 34.png" alt="">
                          <div class="ml-10 my-4">
                         <span class="fa fa-star checked"></span>
                        <span class="fa fa-star checked"></span>
@@ -247,7 +248,7 @@
 
    <!-- Product section -->
 
-   <section class="lg:my-16 my-5"> 
+   <section class="lg:my-16 my-5 lg:pb-40"> 
     <h1 class="text-center font-bold text-5xl">Our Product</h1>
          <div class=" lg:flex justify-center space-x-10 font-extrabold text-2xl lg:my-5 
          text-center ">
@@ -376,7 +377,50 @@
 
    <!--  -->
 
+<section class="lg:max-w-[1512px] h-[468px] bg-[#8B6E5A] ">
+  <div class="lg:flex relative">
+       <div class="lg:space-y-10 space-y-5 p-10 lg:p-20 lg:ml-20">
+            <h1 class="text-4xl font-extrabold">Deal of the Day</h1>
+            <p class="lg:w-[650px]">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+               Velit officia consequat duis enim velit mollit.
+            </p>
+             <div class="flex space-x-6 ">
 
+                  <div class="w-[75px] h-[74px] bg-[#884F42] text-center 
+                  shadow-lg rounded-lg">
+                       <h1 class="font-extrabold text-3xl ">03</h1>
+                       <p>day</p>
+                  </div>
+
+                  <div class="w-[75px] h-[74px] bg-[#884F42] text-center  
+                   shadow-lg rounded-lg">
+                       <h1 class="font-extrabold text-3xl">08</h1>
+                       <p>Hour</p>
+                  </div>
+
+                  <div class="w-[75px] h-[74px] bg-[#884F42] text-center
+                   shadow-lg rounded-lg">
+                       <h1 class="font-extrabold text-3xl">09</h1>
+                       <p>Minute</p>
+                  </div>
+
+             </div>
+             <h1 class="lg:w-[190px] h-[50px] bg-black text-center text-white pt-3
+              shadow-md">
+               SHOP NOW
+             </h1>
+       </div>
+
+       <div>
+        <img class="lg:absolute -top-48" src="./img/Rectangle 18 (1).png" alt="">
+       </div>
+
+
+
+  </div>
+     
+</section>
 
 
 
