--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
         <li><a>TRENDS</a></li>
       </ul>
     </div>
-    <div class="navbar-end">
-      <img class="pr-5" src="./img/Cart.svg" alt="">
-      <button class="btn btn-outline ">LOGIN</button>
+    <div class="navbar-end mr-2">
+      <img class="pr-2" src="./img/Cart.svg" alt="">
+      <div class="avatar online">
+        <div class="w-12 rounded-full">
+          <img src="./img/IMG_20230728_054514.png" />
+        </div>
+      </div>
     </div>
   </div>
 
@@ -134,7 +138,7 @@
 
   <!-- best fashion -->
 
-  <section class=" my-20">
+  <section class=" lg:my-20">
         <div class="lg:flex justify-center lg:space-x-16 relative">
 
           <div class="space-y-10 p-6">
@@ -150,14 +154,15 @@
                    velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
 
-            <div class="lg:w-[675px] lg:h-[122px] bg-[#D2B79E] absolute bottom-10
+            <div class="lg:w-[675px] lg:h-[122px] w-[300px] 
+            bg-[#D2B79E] absolute bottom-10
              shadow-2xl rounded-lg   ">
 
-             <div class="flex justify-around pt-5 p-">
+             <div class="flex justify-around pt-5 space-x-5">
               <div>
                 <div class="">
                    <h1 class="font-extrabold text-2xl lg:text-5xl"> 2014</h1>
-                   <p>Fifash Founded</p>
+                   <p>Founded</p>
                 </div>
            </div>
 
@@ -171,7 +176,7 @@
            <div>
                 <div class="">
                    <h1 class="font-extrabold text-2xl lg:text-5xl">  3100+</h1>
-                   <p>Best Reviews</p>
+                   <p> Reviews</p>
                 </div>
            </div>
              </div>
@@ -375,12 +380,13 @@
          </div>
    </section>
 
-   <!--  -->
+   <!--costomar reviw-->
 
 <section class="lg:max-w-[1512px] h-[468px] bg-[#8B6E5A] ">
   <div class="lg:flex relative">
-       <div class="lg:space-y-10 space-y-5 p-10 lg:p-20 lg:ml-20">
-            <h1 class="text-4xl font-extrabold">Deal of the Day</h1>
+       <div class="bannar-section lg:space-y-10 space-y-5 p-10 lg:p-20 lg:ml-20
+        text-white">
+            <h1 class="text-4xl font-extrabold ">Deal of the Day</h1>
             <p class="lg:w-[650px]">
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
                Velit officia consequat duis enim velit mollit.
@@ -415,13 +421,36 @@
        <div>
         <img class="lg:absolute -top-48" src="./img/Rectangle 18 (1).png" alt="">
        </div>
-
-
-
-  </div>
-     
+  </div>  
 </section>
 
+<!-- Comment section -->
+<!-- 
+<section class=" lg:my-20">
+       <h1 class="font-extrabold text-5xl text-center">
+        What People say about Us
+      </h1>
+
+      <div>
+
+          <div>
+              <h1>
+                What People say about Us
+              </h1>
+              <h2>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+                 Velit officia consequat duis enim velit mollit.
+              </h2>
+                <div class="">
+                  <img src="./img/Ellipse 6 (1).png" alt="">
+                   <h1>Anisa zahra</h1>
+                   <p>Custumer</p>
+                </div>
+          </div>
+
+      </div>
+   
+</section> -->
 
 
 
