added commit section

--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
 
    <!--costomar reviw-->
 
-<section class="lg:max-w-[1512px] h-[468px] bg-[#8B6E5A] ">
-  <div class="lg:flex relative">
+<section class="lg:max-w-[1512px] lg:h-[468px] bg-[#8B6E5A] ">
+  <div class="lg:flex lg:relative">
        <div class="bannar-section lg:space-y-10 space-y-5 p-10 lg:p-20 lg:ml-20
         text-white">
             <h1 class="text-4xl font-extrabold ">Deal of the Day</h1>
@@ -425,32 +425,71 @@
 </section>
 
 <!-- Comment section -->
-<!-- 
-<section class=" lg:my-20">
+
+<section class=" lg:my-20 my-8">
        <h1 class="font-extrabold text-5xl text-center">
         What People say about Us
       </h1>
-
-      <div>
-
-          <div>
-              <h1>
-                What People say about Us
-              </h1>
-              <h2>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
-                 Velit officia consequat duis enim velit mollit.
-              </h2>
-                <div class="">
-                  <img src="./img/Ellipse 6 (1).png" alt="">
-                   <h1>Anisa zahra</h1>
-                   <p>Custumer</p>
-                </div>
+      <div class="lg:flex justify-center lg:space-x-16 lg:my-10 my-8">
+        <!-- card 1 -->
+        <div class="card w-96 bg-[#DBCCBF80] shadow-xl my-10">
+          <h1 class=" text-center font-bold text-2xl pt-5">
+            Amet minim mollit non <br> deserunt ullamco 
+          </h1>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+               Velit officia consequat duis enim velit mollit.
+            </h2>
+            <div class="card-actions">
+             <img src="./img/Ellipse 6.png" alt="">
+            </div>
+            <h1 class="text-2xl font-extrabold">Anisa zahra</h1>
+            <p>Custumer</p>
           </div>
+        </div>
 
-      </div>
-   
-</section> -->
+        <!-- card 2 -->
+        <div class="card w-96 bg-[#DBCCBF80] shadow-xl my-10">
+          <h1 class=" text-center font-bold text-2xl pt-5">
+            Amet minim mollit non <br> deserunt ullamco 
+          </h1>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+               Velit officia consequat duis enim velit mollit.
+            </h2>
+            <div class="card-actions">
+             <img src="./img/Ellipse 6 (1).png" alt="">
+            </div>
+            <h1 class="text-2xl font-extrabold">Nigar Kalfa</h1>
+            <p>Custumer</p>
+          </div>
+        </div>
+
+        <!-- card 3 -->
+        <div class="card w-96 bg-[#DBCCBF80] shadow-xl my-10">
+          <h1 class=" text-center font-bold text-2xl pt-5">
+            Amet minim mollit non <br> deserunt ullamco 
+          </h1>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+               Velit officia consequat duis enim velit mollit.
+            </h2>
+            <div class="card-actions">
+             <img src="./img/Ellipse 6 (2).png" alt="">
+            </div>
+            <h1 class="text-2xl font-extrabold">Hetiza Sultana</h1>
+            <p>Custumer</p>
+          </div>
+        </div>
+
+
+      </div> 
+</section>
+
+<!--  -->
 
 
 
