--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </p>
 
               <h1 class="lg:w-[190px] h-[50px] bg-black text-center text-white pt-3
-              rounded-md  shadow-md">
+              rounded-md  shadow-md hover:ease-in duration-300">
                 SHOP NOW
               </h1>
         </div>
@@ -489,7 +489,61 @@
       </div> 
 </section>
 
-<!--  -->
+<!-- footer img section -->
+<section>
+  <div class="flex">
+        <!-- img1 -->
+         <div class="">
+            <img src="./img/Rectangle 24.png" alt="">
+         </div>
+        <!-- img2 -->
+         <div>
+            <img src="./img/Rectangle 25.png" alt="">
+         </div>
+        <!-- img3 -->
+         <div>
+            <img src="./img/Rectangle 26.png" alt="">
+         </div>
+        <!-- img1 -->
+         <div>
+            <img src="./img/Rectangle 27.png" alt="">
+         </div>
+        <!-- img1 -->
+         <div>
+            <img src="./img/Rectangle 27 (1).png" alt="">
+         </div>
+
+         
+  </div>
+</section>
+
+
+<!-- Footer section -->
+
+<footer class="footer footer-center p-10 bg-[#412F28] text-white rounded">
+  <div class="grid grid-flow-col">
+    <ul class="menu menu-horizontal px-1">
+      <li><a>MEN</a></li>
+      <li><a>WOMEN</a></li>
+      <li><a>KIDS</a></li>
+      <li><a>COLLECTION</a></li>
+      <li><a>TRENDS</a></li>
+    </ul>
+  </div> 
+  <div>
+    <div class="grid grid-flow-col gap-5 text-4xl">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-youtube"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-amazon"></i>
+  
+    </div>
+  </div> 
+  <div>
+    <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+  </div>
+</footer>
 
 
 
